fix for gaps in Customise

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_borders-gaps.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_borders-gaps.scss
@@ -30,9 +30,11 @@
 		#nav-bar,
 		#PersonalToolbar,
 		.notificationbox-stack,
+		#customization-container,
 		#browser {
 			margin: 0 var(--gap-size) 0 var(--gap-size);
 		}
+		#customization-container,
 		#browser {
 			margin-bottom: var(--gap-size);
 		}
